@@ -1,6 +1,6 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
 59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
-9b84fb95fd00d83f27a2d9b96472a78baa40f10f4b1868624e299bfb16cda399  roms/forth
+65b93c67f5d369190d3deaa5ef94948071e6502cd64cc1cc2de9672f7dc859e6  roms/forth
 4c146297da8c672955698a82207295b28feb389c9856a2c6ea6a60ce7e84260a  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
 24a4d74eb2eb7a82e68335643855658b27b5a6c3b13db473539f3e08d6f26ceb  roms/SET
